# y7dl

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
examples/: search_to_json.rs
src/: client.rs  decipher.rs  error.rs  lib.rs  main.rs  response.rs  search.rs  utils.rs  video.rs
tests/: live.rs
tests/fixtures/: player_response.json  search_results.json
