[package]
name = "y7dl"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Rust port of kkdai/youtube: extract video info and download streams"
repository = "https://github.com/erwin-lovecraft/y7dl"
readme = "README.md"
keywords = ["youtube", "download", "video", "innertube"]
categories = ["multimedia::video", "api-bindings"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
