[package]
name = "y7dl"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Rust port of kkdai/youtube: extract video info and download streams"
repository = "https://github.com/erwin-lovecraft/y7dl"
readme = "README.md"
keywords = ["youtube", "download", "video", "innertube"]
categories = ["multimedia::video", "api-bindings"]

[features]
default = ["cli"]
cli = ["tokio/rt-multi-thread", "tokio/macros"]

[[bin]]
name = "y7dl"
required-features = ["cli"]

[[example]]
name = "search_to_json"
required-features = ["cli"]

[dependencies]
tokio = { version = "1", features = ["io-util", "sync", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
